--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "async",
+    "name": "neuro-async",
     "description": "Higher-order functions and common patterns for asynchronous code",
     "main": "./lib/async",
     "author": "Caolan McMahon",
