--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "async",
     "description": "Higher-order functions and common patterns for asynchronous code",
-    "main": "./lib/async",
+    "main": "./lib/async.js",
     "author": "Caolan McMahon",
     "version": "0.2.9",
     "repository" : {
