--- a/package.json
+++ b/package.json
@@ -1,36 +1,38 @@
 {
-    "name": "async",
-    "description": "Higher-order functions and common patterns for asynchronous code",
-    "main": "./lib/async.js",
-    "author": "Caolan McMahon",
-    "version": "0.2.9",
-    "repository" : {
-        "type" : "git",
-        "url" : "git@github.com:kaelzhang/async.git"
-    },
-    "bugs" : {
-        "url" : "git@github.com:kaelzhang/async/issues"
-    },
-    "licenses" : [
-        {
-            "type" : "MIT",
-            "url" : "https://github.com/kaelzhang/async/raw/master/LICENSE"
-        }
-    ],
-    "devDependencies": {
-        "nodeunit": ">0.0.0",
-        "uglify-js": "1.2.x",
-        "nodelint": ">0.0.0"
-    },
-    "jam": {
-        "main": "lib/async.js",
-        "include": [
-            "lib/async.js",
-            "README.md",
-            "LICENSE"
-        ]
-    },
-    "scripts": {
-        "test": "nodeunit test/test-async.js"
-    }
+  "name": "async",
+  "description": "Higher-order functions and common patterns for asynchronous code",
+  "main": "./lib/async.js",
+  "author": "Caolan McMahon",
+  "version": "0.2.9",
+  "repository": {
+    "type": "git",
+    "url": "git@github.com:kaelzhang/async.git"
+  },
+  "bugs": {
+    "url": "git@github.com:kaelzhang/async/issues"
+  },
+  "licenses": [{
+    "type": "MIT",
+    "url": "https://github.com/kaelzhang/async/raw/master/LICENSE"
+  }],
+  "devDependencies": {
+    "nodeunit": ">0.0.0",
+    "uglify-js": "1.2.x",
+    "nodelint": ">0.0.0"
+  },
+  "jam": {
+    "main": "lib/async.js",
+    "include": [
+      "lib/async.js",
+      "README.md",
+      "LICENSE"
+    ]
+  },
+  "scripts": {
+    "test": "nodeunit test/test-async.js"
+  },
+  "keywords": [
+    "async",
+    "asynchronous"
+  ]
 }
